<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/label_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/label_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/label_sort_by_created" />
            <item
                android:id="@+id/sort_by_views"
                android:title="@string/label_sort_by_views" />
        </menu>
    </item>

    <item
        android:id="@+id/refresh"
        android:title="@string/label_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hide_favourites"
        android:checkable="true"
        android:title="@string/label_hide_favourites"
        app:showAsAction="never" />
</menu>